--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>App color</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+            integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/styles.css">
+    </head>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <main class="container">
+        <div class="row">
+            <div class="col-12 col-md-8 mx-auto">
+                <div class="card">
+                    <div class="card-header">Login</div>
+                    <div class="card-body">
+                        <form method="POST">
+                            <div class="mb-3">
+                                <label for="exampleInputName" class="form-label">Ingrese su nombre</label>
+                                <input type="text" class="form-control" id="exampleInputName" name="name" value="<%= locals.old && old.name ? old.name : null  %>">
+                                <span class="text-danger small"><%= locals.errors && errors.name ? errors.name.msg : null %> </span>
+                              </div>
+                            <div class="mb-3">
+                              <label for="exampleInputEmail1" class="form-label">Ingrese su email</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" name="email" value="<%= locals.old && old.email ? old.email : null  %>">
+                              <span class="text-danger small"><%= locals.errors && errors.email ? errors.email.msg : null %> </span>
+                            </div>
+                            <div class="mb-3">
+                              <label for="edad" class="form-label">Ingrese su edad:</label>
+                              <input type="number" class="form-control" id="edad" name="edad">
+                              <span class="text-danger small"><%= locals.errors && errors.pass ? errors.pass.msg : null %> </span>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword2" class="form-label">Seleccionar color:</label>
+                                <select name="pais" id="pais">
+                                    <option value="" selected hidden>Seleccione</option>
+                                    <% colors.forEach(color => { %> 
+                                        <option value="<%= color %> "><%= color %> </option>
+                                    <% }) %> 
+                                </select>
+                                <small></small>
+                                <span class="text-danger small"><%= locals.errors && errors.pass2 ? errors.pass2.msg : null %> </span>
+                              </div>
+                            <div class="mb-3 form-check">
+                              <input type="checkbox" class="form-check-input" id="color" name="color">
+                              <label class="form-check-label" for="color">Recordar color</label>
+                              <span class="text-danger small"><%= locals.errors && errors.terms ? errors.terms.msg : null %> </span>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                          </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
   </body>
 </html>
